--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="minimum-scale=1,initial-scale=1,width=device-width,shrink-to-fit=no"/>
-  <link rel="stylesheet" href="../core-css-layout-site/css/style.css">
-  <link rel="icon" href="../core-css-layout-site/img/VOLKOV-FAX-ICON-1.png" type="image/png">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="../img/VOLKOV-FAX-ICON-1.png" type="image/png">
   <title>Volkov Lab. - Code Time &#9795;
   </title>
 </head>
 <body>
   <div id="logo"><p>Наведи на меня...</p>
-    <img src="../core-css-layout-site/img/VOLKOV-FAX.svg" alt="Volkov Lab.">
+    <img src="../img/VOLKOV-FAX.svg" alt="Volkov Lab.">
   </div>
 <div id="menu">
   <ul>
@@ -27,7 +27,7 @@
   <div id="container">
     <div id="block1">
     <div id="myPhoto">
-      <img src="../core-css-layout-site/img/In-The-Dark-495x400.jpg" alt="Volkov's Dark" title="In The Dark &#127761;">
+      <img src="../img/In-The-Dark-495x400.jpg" alt="Volkov's Dark" title="In The Dark &#127761;">
     </div>
     <div id="intro">
       <h1>VOLKOV I.I.</h1>
@@ -75,7 +75,7 @@
     <p>Отправляй письма голубями <span class="bigRed">&#128330;</span></p>
     <p class="bigRed">you know what you know</p>
     <div id="myBlurPhoto">
-      <img src="../core-css-layout-site/img/VolkovBlur.jpg" width="300" alt="Volkov Blur">
+      <img src="../img/VolkovBlur.jpg" width="300" alt="Volkov Blur">
     </div>
     <blockquote><i>
       В погоне за цифровым образом и в попытках создать искусственный облик ты теряешь себя настоящего.<br>В попытках притворяться кем-то другим ты забываешь свою истинную натуру и сущность, которая заложена в тебе бесконечным пространством.<br><br>V.I.I.</i>
